CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/")

SET(embree_DIR ""
    CACHE FILEPATH "Directory containing an embree-config.cmake file")
SET(ospray_DIR ""
    CACHE FILEPATH "Directory containing an osprayConfig.cmake file")
FIND_PACKAGE(ospray REQUIRED)
FIND_PACKAGE(embree "2.15.0" REQUIRED)
SET(NETCDF_INCLUDE_DIR "/usr/include"
    CACHE FILEPATH "Path to NetCDF includes")
SET(NETCDF_LIBRARY "/usr/lib/x86_64-linux-gnu/libnetcdf_c++4.so"
    CACHE FILEPATH "Path to NetCDF library")
SET(NETCDF_USE_DEFAULT_PATHS ON)
FIND_PACKAGE(NetCDF COMPONENTS CXX)
SET(PBNJ_INSTALL_DIR "" CACHE PATH "PBNJ installation directory")

SET(PBNJ_LIBS ${PBNJ_INSTALL_DIR}/lib/libpbnj.so ${EMBREE_LIBRARIES} ${OSPRAY_LIBRARIES} ${NETCDF_CXX_LIBRARIES})
SET(PBNJ_INCLUDE_DIRS "${PBNJ_INSTALL_DIR}/include"
    ${OSPRAY_INCLUDE_DIRS} ${EMBREE_INCLUDE_DIRS} ${NETCDF_CXX_INCLUDE_DIRS})

ADD_EXECUTABLE(makeRandomRenders randomRenders.cpp)
TARGET_INCLUDE_DIRECTORIES(makeRandomRenders PUBLIC ${PBNJ_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(makeRandomRenders ${PBNJ_LIBS})

ADD_EXECUTABLE(cameraPath cameraPath.cpp)
TARGET_INCLUDE_DIRECTORIES(cameraPath PUBLIC ${PBNJ_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(cameraPath ${PBNJ_LIBS})

MESSAGE(STATUS "PBNJ INCLUDE DIRS: ${PBNJ_INCLUDE_DIRS}")
MESSAGE(STATUS "PBNJ LIBS: ${PBNJ_LIBS}")
MESSAGE(STATUS "OSPRAY LIBS: ${OSPRAY_LIBRARIES}")
MESSAGE(STATUS "EMBREE LIBS: ${EMBREE_LIBRARIES}")
